[FIX] Small fix for the pivot position on now-playing screen. Visible again on mobile devices

--- a/app/nowPlaying/nowPlaying.component.css
+++ b/app/nowPlaying/nowPlaying.component.css
@@ -35,7 +35,7 @@
 
 #nowPlaying .image-wrapper {
     position: relative;
-    height: calc(100% - 145px);
+    height: calc(100% - 160px);
     z-index: 0;
     margin: 0 auto;
     width: 100%;
